<resources>
    <string name="app_name">Music_Service</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hold_to_drag_element">Hold to reorder elements</string>
    <string name="best_of_the_best">BEST OF THE BEST</string>
    <string name="popular_choice">POPULAR CHOICE</string>
    <string name="recommendations">RECOMMENDATIONS</string>
    <string name="good_day">GOOD DAY</string>
    <string name="account">ACCOUNT</string>
    <string name="personalize">Personalize</string>
    <string name="log_out">Log Out</string>
    <string name="close">Close</string>
    <string name="discover">DISCOVER</string>
    <string name="modern_artists">MODERN ARTISTS</string>
    <string name="daily_top">DAILY TOP</string>
    <string name="e_mail">E-Mail</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="personal">Personal</string>
    <string name="welcome">WELCOME</string>
    <string name="music_studio">Music Studio</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="sign_up">Sign Up</string>
    <string name="play">Play</string>
    <string name="play_last">Play Last</string>
    <string name="play_next">Play Next</string>
    <string name="add_to_playlist">Add to Playlist</string>
    <string name="remove">Remove</string>
    <string name="queue">QUEUE</string>
    <string name="home">Home</string>
    <string name="library">Library</string>
    <string name="personal_title">Personal</string>
    <string name="this_is_your_name_in_the_app">This is your name in the app</string>
    <string name="start_typing">Start typing...</string>
    <string name="this_is_your_nickname">This is your nickname</string>
    <string name="change_account_information">Change account information</string>
    <string name="change_profile_photo">Change Profile Photo</string>
    <string name="edit_profile">EDIT PROFILE</string>
    <string name="save">SAVE</string>
    <string name="cancel">CANCEL</string>
    <string name="search">Search...</string>
    <string name="type_to_see_results">TYPE TO SEE RESULTS</string>
    <string name="song_search">Song</string>
</resources>