<?xml version="1.0" encoding="utf-8"?>
<com.example.music_service.models.SwipeToRefresh xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipe"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_700"
    tools:context=".fragments.LibraryFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/discover_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/panton_extra_bold"
                android:letterSpacing=".1"
                android:text="@string/discover"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/search_button"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="20dp"
                android:backgroundTint="@android:color/transparent"
                android:src="@drawable/search_40" />

            <androidx.cardview.widget.CardView
                android:id="@+id/best_daily_region"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/discover_txt"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="15dp"
                android:backgroundTint="@android:color/transparent">

                <ImageView
                    android:layout_width="300dp"
                    android:layout_height="200dp"
                    android:src="@drawable/library_frame" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    android:fontFamily="@font/panton_semi_bold"
                    android:letterSpacing=".1"
                    android:text="@string/best_of_the_best"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/best_rec_view"
                    android:layout_width="259dp"
                    android:layout_height="128dp"
                    android:layout_gravity="end"
                    android:layout_marginTop="45dp" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/modern_artists"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/best_daily_region"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/panton_extra_bold"
                android:letterSpacing=".1"
                android:text="@string/modern_artists"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/artists_rec_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/modern_artists"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="20dp" />

            <TextView
                android:id="@+id/daily_top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/artists_rec_view"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/panton_extra_bold"
                android:letterSpacing=".1"
                android:text="@string/daily_top"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/daily_top_rec_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/daily_top"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="20dp" />

        </RelativeLayout>

    </RelativeLayout>

</com.example.music_service.models.SwipeToRefresh>